--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 11:59:00 AM</p>
+    <p class="lastupdate">09/07/2020 12:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,8 +84,8 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">95.5<br/>
-            <span class="timestamp">11:59:00 AM</span><br/>
+          <td class="data new_row">96.4<br/>
+            <span class="timestamp">12:03:48 PM</span><br/>
             67.6<br/>
             <span class="timestamp">07:29:05 AM</span>
           </td>
@@ -113,8 +113,8 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">95.5<br/>
-            <span class="timestamp">11:59:00 AM</span>
+          <td class="data new_row">96.4<br/>
+            <span class="timestamp">12:03:48 PM</span>
           </td>
           <td class="data new_row">117.5<br/>
             <span class="timestamp">04:04:42 PM (Sunday)</span>
@@ -182,8 +182,8 @@
           <td class="units">%</td>
           <td class="data new_row">56<br/>
             <span class="timestamp">07:20:19 AM</span><br/>
-            27<br/>
-            <span class="timestamp">11:55:22 AM</span>
+            25<br/>
+            <span class="timestamp">12:03:04 PM</span>
           </td>
           <td class="data new_row">56<br/>
             <span class="timestamp">07:20:19 AM (Monday)</span><br/>
@@ -211,18 +211,18 @@
           <td class="units"> inHg</td>
           <td class="data new_row">29.836<br/>
             <span class="timestamp">12:09:01 AM</span><br/>
-            29.766<br/>
-            <span class="timestamp">11:55:02 AM</span>
+            29.763<br/>
+            <span class="timestamp">12:03:02 PM</span>
           </td>
           <td class="data new_row">29.954<br/>
             <span class="timestamp">09:59:02 AM (Sunday)</span><br/>
-            29.766<br/>
-            <span class="timestamp">11:55:02 AM (Monday)</span>
+            29.763<br/>
+            <span class="timestamp">12:03:02 PM (Monday)</span>
           </td>
           <td class="data new_row">30.063<br/>
             <span class="timestamp">09/02/2020 09:40:02 AM</span><br/>
-            29.766<br/>
-            <span class="timestamp">09/07/2020 11:55:02 AM</span>
+            29.763<br/>
+            <span class="timestamp">09/07/2020 12:03:02 PM</span>
           </td>
           <td class="data new_row">30.065<br/>
             <span class="timestamp">07/04/2020 08:07:00 AM</span><br/>
@@ -275,9 +275,9 @@
             &#176;
           </td>
           <td class="data new_row">
-            5<br/>
-            0<br/>
-            <span class="timestamp">10:54:18 AM</span>
+            7<br/>
+            20<br/>
+            <span class="timestamp">12:00:26 PM</span>
           </td>
           <td class="data new_row">
             11<br/>
@@ -335,11 +335,11 @@
           </td>
           <td class="data new_row">
             1<br/>
-            14
+            15
           </td>
           <td class="data new_row">
             1<br/>
-            1
+            2
           </td>
           <td class="data new_row">
             1<br/>
