--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 12:09:00 PM</p>
+    <p class="lastupdate">09/07/2020 12:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">97.4&#176;F</td>
+        <td class="data">97.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">97.4&#176;F</td>
+        <td class="data">97.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">97.4&#176;F</td>
+        <td class="data">97.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.5&#176;F</td>
+        <td class="data">54.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.762 inHg (-0.051)</td>
+        <td class="data">29.758 inHg (-0.058)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph NNE (22&#176;)</td>
+        <td class="data">3 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">84.1&#176;F</td>
+        <td class="data">84.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:08:54 PM">
-            97.4</span><br/>
+          <span title="12:13:42 PM">
+            97.7</span><br/>
           <span title="07:29:05 AM">
             67.6</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:08:54 PM" class="hival">
-            97.4</span>
+          <span title="12:13:42 PM" class="hival">
+            97.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="07:20:19 AM">
             56</span><br/>
-          <span title="12:04:46 PM">
-            24</span>
+          <span title="12:11:36 PM">
+            23</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:20:19 AM (Monday)">
@@ -305,20 +305,20 @@
         <td class="data new_row hilo_day">
           <span title="12:09:01 AM">
             29.836</span><br/>
-          <span title="12:08:02 PM">
-            29.762</span>
+          <span title="12:13:02 PM">
+            29.758</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="12:08:02 PM (Monday)">
-            29.762</span>
+          <span title="12:13:02 PM (Monday)">
+            29.758</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/07/2020 12:08:02 PM">
-            29.762</span>
+          <span title="09/07/2020 12:13:02 PM">
+            29.758</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 21 hours, 22 minutes</td>
+      <td class="data">5 days, 21 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 21 hours, 22 minutes</td>
+      <td class="data">5 days, 21 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
